--- a/.editorconfig
+++ b/.editorconfig
@@ -4,7 +4,7 @@ root = true
 end_of_line = lf
 charset = utf-8
 indent_size = tab
-indent_style = tab
+indent_style = space
 trim_trailing_whitespace = true
 insert_final_newline = true
 
